# PGM-Final-Project

./: README.md  config.json  main.py  pyproject.toml  requirements.txt
legacy_scripts/: PGM_project_saeed_samimi_40108724_3layerae_3layermlp.py  pgm_auto_encoder_mlp_both_bayesian.py  pgm_bayesian_auto_encoder_mlp.py  pgm_project_last_version.py
src/pgm_final_project/: __init__.py  cli.py  config.py  data.py  models.py  pipeline.py  visualization.py
